lib/igt_core: fix overflow in micro/nano-seconds calculations

Multiplication without using casting to long (long) for at least
one argument in expression may cause overflow especially when we're
using this for calculating timeouts in nanoseconds precision.

Ensure we're picking valid ul/ull suffix for base definitions for
all dependents.

Reported-by: Ilia Levi <ilia.levi@intel.com>
Closes: https://gitlab.freedesktop.org/drm/igt-gpu-tools/-/issues/163
Cc: Lucas De Marchi <lucas.demarchi@intel.com>
Cc: Ilia Levi <ilia.levi@intel.com>
Reviewed-by: Lucas De Marchi <lucas.demarchi@intel.com>
Reviewed-by: Kamil Konieczny <kamil.konieczny@linux.intel.com>
Link: https://lore.kernel.org/r/20241218060730.18961-1-zbigniew.kempczynski@intel.com
Signed-off-by: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>